# Ambersonic

./: .gitignore  README.md  cat.of.power.Ambersonic.json  meson.build
data/: cat.of.power.Ambersonic.desktop.in  cat.of.power.Ambersonic.gschema.xml  cat.of.power.Ambersonic.metainfo.xml.in  cat.of.power.Ambersonic.service.in  gschemas.compiled  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: ambersonic.gresource.xml  api.vala  application.vala  audio_player.vala  main.vala  meson.build  player.vala  player_manager.vala  preferences.blp  preferences.vala  window.blp  window.vala
src/blueprints/: album_view.blp  window.blp
src/views/: album_view.vala
src/widgets/: album_card.vala  song_card.vala
